# AILearningProgram

./: .gitignore  ai-training-program-outline.md  pyproject.toml  week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md
api/: index.py
backend/: main.py  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  db.py
backend/app/models/: progress.py  submission.py
backend/app/schemas/: course.py  progress.py  submission.py
backend/app/services/: content_loader.py  curriculum_transformers.py  week_markdown_parser.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
content/: course-manifest.json
content/weeks/teacher-workshop-01/: week.json
content/weeks/week-01/: week.json
content/weeks/week-02/: week.json
content/weeks/week-03/: week.json
content/weeks/week-04/: week.json
content/weeks/week-05/: week.json
content/weeks/week-06/: week.json
content/weeks/week-07/: week.json
content/weeks/week-08/: week.json
content/weeks/week-09/: week.json
content/weeks/week-10/: week.json
docs/: AI-Training-Interactive-App-Architecture.md  IMPLEMENTATION-CHECKLIST.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: ActivityPanel.tsx  ActivityStudio.tsx  CurriculumExplorer.tsx  ImagesPanel.tsx  LessonRenderer.tsx  MediaPlaceholderGrid.tsx  QuizPanel.tsx  ReflectionPanel.tsx  TeacherDemoPlayer.tsx  WeekCard.tsx
frontend/src/pages/: DashboardPage.tsx  WeekPage.tsx
(+5 files in other folders)
