[project]
name = "ai-learning-program"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "alembic==1.13.3",
    "python-multipart==0.0.12",
]

[project.scripts]
app = "api.index:app"

[tool.vercel.scripts]
build = "npm --prefix frontend install && npm --prefix frontend run build"
